[gd_scene load_steps=5 format=3 uid="uid://bvvjo3tmjc5ds"]

[ext_resource type="PackedScene" uid="uid://c0mw0jwbq1np4" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/Navigation_Button.tscn" id="3_a5huw"]
[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/ScenePath_Template.gd" id="5"]

[node name="ScenePath_Template" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("5")
label_text = "ScenePath_Template"

[node name="Label" parent="." instance=ExtResource("3")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChangeSceneButton" parent="HBoxContainer" groups=["Table Action"] instance=ExtResource("3_a5huw")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
button_text = "Edit Path"
auto_connect_signals = false
auto_set_minimum_size = false
auto_set_color = true

[node name="ChangeSceneButton1" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Select Path"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Input" type="LineEdit" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false

[node name="Display" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
editable = false
expand_to_text_length = true
selecting_enabled = false

[node name="Space" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OpenScene" parent="HBoxContainer" groups=["Table Action"] instance=ExtResource("3_a5huw")]
self_modulate = Color(0.368627, 0.156863, 0.788235, 1)
layout_mode = 2
button_text = "Open Scene"
auto_connect_signals = false
auto_set_minimum_size = false
auto_set_color = true

[node name="OpenScene1" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Open Scene"

[node name="input_templateBuffer" parent="." instance=ExtResource("2")]
layout_mode = 2

[connection signal="button_up" from="HBoxContainer/ChangeSceneButton" to="." method="_on_TextureButton_button_up"]
[connection signal="button_up" from="HBoxContainer/OpenScene" to="." method="_on_open_scene_button_up"]
[connection signal="button_up" from="HBoxContainer/OpenScene1" to="." method="_on_open_scene_button_up"]
